--- a/src/Grid/Grid.stories.mdx
+++ b/src/Grid/Grid.stories.mdx
@@ -1,5 +1,5 @@
-import { Meta, Story, Props } from '@storybook/addon-docs/blocks';
-import Container from './Container';
+import { Meta, Story, Props, Heading, Source, Preview, Shared } from '@storybook/addon-docs/blocks';
+import {Container, Row, Col} from './index';
 
 <Meta title='Container' component={Container} />
 
@@ -7,9 +7,18 @@ import Container from './Container';
 
 Some **markdown** description, or whatever you want.
 
-<Story name='basic' height='400px'>
-  <Container>Label</Container>
-</Story>
+<Preview>
+    <Story name='Grid System' height='400px'>
+      <Container borderColor="primary" bgColor="primary" lg p="4" t_c>
+        <Row pad="2">
+            <Col md="3" sm="6" borderColor="black" p="2">md=3 & sm=6</Col>
+            <Col md="3" sm="6" borderColor="black" p="2">md=3 & sm=6</Col>
+            <Col md="3" sm="6" borderColor="black" p="2">md=3 & sm=6</Col>
+            <Col md="3" sm="6" borderColor="black" p="2">md=3 & sm=6</Col>
+        </Row>
+      </Container>
+    </Story>
+</Preview>
 
 ## Props
 
